[workspace]

members = [
  "adder",
  "comments",
  "control_flow",
  "data_types",
  "enums",
  "exersise_rectangle_structs",
  "functions",
  "guessing_game",
  "hello-rust",
  "if_let",
  "match_control_flow",
  "methods",
  "modules",
  "option",
  "ownership",
  "primes",
  "references",
  "slices",
  "structs",
  "variables",
  "wrapping_parants",
]
