[package]
name = "grrs"
version = "0.1.0"
authors = ["Samuel Thewessen <sthewessen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
clap-verbosity-flag = "0.3"
log = "0.4"
env_logger = "0.7"
